# pxs

./: .justfile  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  benchmark.sh  local_pxs_vs_rsync.sh  remote_pxs_vs_rsync.sh  sync.sh
.github/workflows/: coverage.yml  test.yml
docs/: design.md
src/cli/actions/: mod.rs  run.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
src/pxs/net/: codec.rs  mod.rs  path.rs  protocol.rs  receiver.rs  sender.rs  shared.rs  ssh.rs  tasks.rs
src/pxs/sync/: delete.rs  dir.rs  file.rs  meta.rs
src/pxs/tools/: compare.rs  fs.rs  hash.rs  mod.rs  probes.rs  progress.rs  runtime.rs  safety.rs  staging.rs  tests.rs
tests/: cli_test.rs  net_test.rs  sync_test.rs
tests/podman/: Containerfile  ensure_ssh_key.sh  run_all.sh  run_ssh_suite.sh  run_tcp_suite.sh  test_ssh_delete.sh  test_ssh_parallel_push.sh  test_ssh_pull.sh  test_ssh_pull_resume.sh  test_ssh_push.sh  test_tcp_directory_pull.sh  test_tcp_directory_resume.sh  test_tcp_pull.sh  test_tcp_push.sh
