[package]
name = "pxs"
version = "0.6.0"
edition = "2024"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "pxs (Parallel X-Sync) - Integrity-first Rust sync/clone for large mutable datasets."
readme = "README.md"
homepage = "https://github.com/nbari/pxs"
repository = "https://github.com/nbari/pxs"
documentation = "https://docs.rs/pxs"
keywords = ["sync", "rsync", "parallel", "transfer", "backup"]
categories = ["command-line-utilities", "filesystem"]
license = "BSD-3-Clause"
exclude = [
    "tests/podman/*",
    "benchmark.sh",
    "local_pxs_vs_rsync.sh",
    "remote_pxs_vs_rsync.sh",
    ".github/*",
]

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
anyhow = "1"
bytes = "1.11.1"
chrono = "0.4"
clap = { version = "4.6", features = ["env"] }
filetime = "0.2.27"
futures-util = "0.3.32"
ignore = "0.4.25"
indicatif = "0.18.4"
lz4_flex = "0.11"
memchr = "2.8.0"
memmap2 = "0.9"
nix = { version = "0.31.2", features = ["fs", "user"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "tls"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
rkyv = "0.8.15"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50", features = ["full", "io-util", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
twox-hash = "2.1.2"
blake3 = { version = "1", features = ["mmap", "rayon"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pxs", dest = "/usr/local/bin/pxs", mode = "0755" },
]

[package.metadata.deb]
assets = [
  ["target/release/pxs", "/usr/local/bin/pxs", "755"],
]
depends = ""

[build-dependencies]
built = { version = "0.8", features = ["git2"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
tempfile = "3"
